--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==3.0.3
 pytest==8.3.3
 pytest-mock==3.14.0
 scikit-learn
+werkzeug
 umap-learn
 matplotlib
 pdfplumber
@@ -14,4 +15,3 @@ openpyxl
 PyMuPDF
 pytesseract
 Faker
-pytest
